# clay_rust

./: .gitignore  Cargo.toml  README.md  build.c  build.rs  clay.h
.github/workflows/: ci.yaml
clay/: clay.c
examples/: Cargo.toml  basic_rectangle.rs  raylib_renderer.rs
examples/wgpu/: graphics_context.rs  main.rs  ui_layout.rs  ui_renderer.rs
scripts/: generate_bindings.ps1  generate_bindings.sh
src/: bindings.rs  color.rs  commands.rs  elements.rs  errors.rs  id.rs  layout.rs  lib.rs  math.rs  mem.rs  raylib.rs  render_commands.rs  text.rs
src/bindings/: bindings.rs  bindings_debug.rs  mod.rs
src/elements/: custom.rs  image.rs  mod.rs  rectangle.rs  text.rs
src/elements/containers/: border.rs  floating.rs  floating_container.rs  mod.rs  scroll.rs
src/layout/: alignment.rs  mod.rs  padding.rs  sizing.rs
src/renderers/: raylib.rs  skia.rs
