[package]
name = "clay-layout"
version = "0.2.0"
edition = "2021"
description = "Rust bindings for Clay, a UI layout library written in C."
keywords = ["clay", "ui", "layout", "bindings", "no_std"]
repository = "https://github.com/clay-ui-rs/clay"
readme = "README.md"
license-file = "LICENSE.md"
exclude = ["scripts/*", ".vscode/*", ".github/*", ".cargo/*"]

[build-dependencies]
cc = "1.0"

[features]
default = ["std"]
raylib-renderer = ["raylib", "thiserror"]

std = []
wasm = []
debug = []

[dependencies]
raylib = { version = "5.0.2", optional = true }
thiserror = { version = "2.0.11", optional = true }
